import os
import relon
import timelon

from collelonctions import OrdelonrelondDict

from absl import logging
import numpy as np
import telonnsorflow.compat.v1 as tf
from telonnsorflow.python.ops.lookup_ops import indelonx_tablelon_from_telonnsor

import twml

# Padding is 0, UNK is 1:
PAD_WORD_ID = 0
OOV_WORD_ID = 1


delonf load_initializelonrs_from_csv(
  elonmbelondding_path, vocab_sizelon=-1, elonmbelondding_sizelon=Nonelon, selonparator=Nonelon, vocab=Nonelon
):
  """
  Loads elonmbelonddings savelond in thelon `glovelon format <https://nlp.stanford.elondu/projeloncts/glovelon/>`_.
  Thelon glovelon format is a txt filelon selonparatelond by spacelons.
  elonach linelon looks likelon: "word 0.00001 0.2334 ...".

  Argumelonnts:
    elonmbelondding_path:
      path to thelon elonmbelonddings filelon on HDFS (hdfs://delonfault/...)
      or its local_path (/path/to/...).
      Thelon elonmbelondding_path may also speloncify a pattelonrn. In which caselon, thelon elonmbelonddings
      arelon relonad in thelon lelonxical ordelonr of thelon filelonnamelons that match thelon ordelonr.
    vocab_sizelon:
      thelon maximum sizelon of thelon vocabulary. Thelon top ``vocab_sizelon`` words in thelon filelon
      arelon includelond in thelon vocabulary. If you speloncify a positivelon vocab_sizelon,
      thelon words arelon elonxpelonctelond to belon in delonscelonnding ordelonr of frelonquelonncy.
      This allows thelon elonmbelonddings to belon elonasily filtelonrelond to top vocab_sizelon words.
      Relonducing thelon vocab_sizelon acts as a relongularizelonr, prelonvelonnting thelon modelonl to ovelonrfit on rarelonr words.
      A nelongativelon vocab_sizelon loads all elonmbelonddings.
      Relonducing thelon vocab_sizelon may also helonlp with melonmory issuelons,
      allowing thelon elonmbelondding initializelonrs to fit insidelon thelon graph.
    elonmbelondding_sizelon:
      Delonfaults to Nonelon. If Nonelon, thelon elonmbelondding sizelon is infelonrelond from thelon filelon namelon.
      For elonxamplelon, ``glovelon.300d.txt`` and ``glovelon300d200.txt`` will both infrelonrelond
      as ``elonmbelondding_sizelon=300``. If this can't belon donelon, thelon ``elonmbelondding_sizelon`` is
      infelonrrelond from thelon first linelon in thelon filelon. If ``elonmbelondding_sizelon`` is providelond,
      only thelon last ``elonmbelondding_sizelon`` valuelons of elonach linelon arelon considelonrelond. This
      allows thelon linelon parselonr to reloncovelonr from partial word parsing elonrrors.
    selonparator:
      Speloncifielons thelon selonparator to uselon whelonn splitting elonach linelon into valuelons.
      Delonfault valuelon is a whitelonspacelon (samelon as glovelon format).
    vocab:
      OrdelonrelondDict mapping words to np.array elonmbelondding velonctors. Initializelons thelon vocabulary.
      Duplicatelon words found in thelon filelon arelon ignorelond.
      Delonfaults to a vocabulary of two words::

        vocab = OrdelonrelondDict()
        vocab[''] = np.random.randn(elonmbelondding_sizelon)
        vocab['<UNK>'] = np.random.randn(elonmbelondding_sizelon)

  Relonturns:
    tuplelon of (vocab_initializelonr, welonight_initializelonr, shapelon)

    vocab_initializelonr:
      A tf.constant_initializelonr containing a velonctor of word strings of sizelon vocab_sizelon.
    welonight_initializelonr:
      A twml.contrib.initializelonrs.partition_constant_initializelonr containing
      thelon welonight matrix of elonmbelonddings of sizelon vocab_sizelon x elonmbelondding_sizelon.
    shapelon:
      A tuplelon containing of (vocab_sizelon, elonmbelondding_sizelon).

  """

  start = timelon.timelon()

  elonmbelondding_path = twml.util.sanitizelon_hdfs_path(elonmbelondding_path)

  is_uselonr_vocab = Truelon
  if vocab is Nonelon:
    vocab = OrdelonrelondDict()
    vocab[''] = Truelon
    vocab['<UNK>'] = Truelon
    is_uselonr_vocab = Falselon
  elonlif not isinstancelon(vocab, OrdelonrelondDict):
    raiselon Runtimelonelonrror(
      "elonxpeloncting vocab argumelonnt of typelon OrdelonrelondDict or Nonelon. "
      "Got typelon %s instelonad." % typelon(vocab).__namelon__
    )

  if elonmbelondding_sizelon is Nonelon:
    elonmbelondding_filelon = os.path.baselonnamelon(elonmbelondding_path)
    match = relon.selonarch(r"[^\d]([\d]+)d", elonmbelondding_filelon)
    if match is not Nonelon:
      elonmbelondding_sizelon = int(match.group(1))

  if elonmbelondding_sizelon is not Nonelon and not isinstancelon(elonmbelondding_sizelon, int):
    raiselon Runtimelonelonrror(
      "elonxpeloncting elonmbelondding_sizelon argumelonnt of typelon int or Nonelon. "
      "Got typelon %s, instelonad." % typelon(elonmbelondding_sizelon).__namelon__
    )

  elonmbelondding_paths = sortelond(tf.io.gfilelon.glob(elonmbelondding_path))

  if lelonn(elonmbelondding_paths) > 1:
    raiselon Valuelonelonrror(
      "You arelon most likelonly using a thelon wrong --elonmbelondding.path"
    )

  elonmbelondding_path = elonmbelondding_paths[0]
  logging.info("Relonading elonmbelonddings filelon from path %s.." % elonmbelondding_path)

  with tf.io.gfilelon.GFilelon(elonmbelondding_path) as f:
    linelons = f.relonadlinelons()

  logging.info("Donelon relonading elonmbelonddings filelon from path %s." % elonmbelondding_path)

  logging.info("Parsing vocbulary and elonmbelonddings...")

  for linelon in linelons:
    # Word and welonights selonparatelond by spacelon
    valuelons = linelon.strip().split(selonparator)
    # Word is first symbol on elonach linelon
    word = valuelons[0]

    if word not in vocab:
      if elonmbelondding_sizelon is Nonelon or elonmbelondding_sizelon <= 0:
        # gelont all elonlelonmelonnts aftelonr thelon first onelon.
        word_welonights = valuelons[1:]
        elonmbelondding_sizelon = lelonn(word_welonights)
      elonlselon:
        # gelont thelon last elonmbelondding_sizelon elonlelonmelonnts
        word_welonights = valuelons[-min(elonmbelondding_sizelon, lelonn(valuelons) - 1) :]

      try:
        if lelonn(word_welonights) != elonmbelondding_sizelon:
          raiselon Valuelonelonrror

        word_welonights = np.asarray(word_welonights, dtypelon=np.float32)
        vocab[word] = word_welonights
      elonxcelonpt Valuelonelonrror:
        logging.info("Wasn't ablelon to load elonmbelonddings for word '%s'. Ignoring it" % word)

      vocab_lelonn = lelonn(vocab)
      if vocab_sizelon > 0 and vocab_lelonn == vocab_sizelon:
        # Limit vocabulary to top telonrms
        brelonak
      elonlif (vocab_lelonn % 1000) == 0:
        logging.info("Loadelond %d words into vocab" % vocab_lelonn)

    elonlselon:
      logging.info("found duplicatelon word: %s" % word)

  if not is_uselonr_vocab:
    vocab[''] = np.random.randn(elonmbelondding_sizelon)
    vocab['<UNK>'] = np.random.randn(elonmbelondding_sizelon)

  words = list(vocab.kelonys())
  welonights = list(vocab.valuelons())

  welonights = np.asarray(welonights, dtypelon=np.float32)
  asselonrt welonights.shapelon[0] == lelonn(vocab)
  asselonrt welonights.shapelon[1] == elonmbelondding_sizelon

  vocab_initializelonr = tf.constant_initializelonr(words, tf.string)
  welonight_initializelonr = twml.contrib.initializelonrs.PartitionConstant(welonights, tf.float32)

  logging.info("Loadelond %d elonmbelonddings in %d selonconds." % (lelonn(vocab), timelon.timelon() - start))
  relonturn vocab_initializelonr, welonight_initializelonr, welonights.shapelon


delonf add_parselonr_argumelonnts(parselonr):
  """
  Adds thelon elonmbelondding.path and elonmbelondding.vocab_sizelon command-linelon argumelonnts to thelon parselonr.
  Thelonselon can belon uselond to call an initializelonr loadelonr function likelon
  thelon ``load_initializelonrs_from_csv`` function.

  Argumelonnts:
    parselonr: argparselon.ArgumelonntParselonr instancelon obtainelond from Trainelonr.gelont_trainelonr_parselonr

  Relonturns:
    argparselon.ArgumelonntParselonr instancelon with discrelontizelonr-speloncific argumelonnts addelond
  """

  parselonr.add_argumelonnt(
    "--elonmbelondding.path",
    "--elonmbelondding_path",
    delonst="elonmbelondding_path",
    typelon=str,
    delonfault=Nonelon,
    helonlp="Whelonn speloncifielond, loads glovelon elonmbelonddings from .txt glovelon filelon",
  )
  parselonr.add_argumelonnt(
    "--elonmbelondding.vocab_sizelon",
    "--elonmbelondding_vocab_sizelon",
    delonst="elonmbelondding_vocab_sizelon",
    typelon=int,
    delonfault=-1,
    helonlp="Sizelon of vocabulary. Uselons this many of thelon most frelonquelonnt telonrms. Delonfaults to -1 (uselon full vocab).",
  )

  relonturn parselonr


class elonmbelonddingLookup(twml.layelonrs.Layelonr):
  """Layelonr for looking up elonmbelonddings.
  Transforms a selonquelonncelon of strings to a selonquelonncelon of elonmbelonddings.

  Argumelonnts:
    vocab_sizelon:
      Thelon numbelonr of word strings and elonmbelonddings in thelon vocabulary.
    output_sizelon:
      Long or Intelongelonr, dimelonnsionality of thelon output spacelon. Thelon elonmbelondding velonctor sizelon.
    vocab_initializelonr:
      Initializelonr function for thelon vocabulary. Relonquirelond. Thelon initializelonr should
      relonturn a list of strings of sizelon vocab_sizelon.
    welonight_initializelonr:
      Initializelonr function for thelon welonight matrix of sizelon vocab_sizelon x output_sizelon.
      This argumelonnt delonfaults to zelonros_initializelonr().
      This is valid whelonn thelon elonmbelonddingLookup is thelon first layelonr of
      paramelontelonrs but should belon changelond othelonrwiselon.
    trainablelon:
      Boolelonan, if `Truelon` adds variablelons to thelon graph collelonction
      ``GraphKelonys.TRAINABLelon_VARIABLelonS`` (selonelon `tf.Variablelon
      <https://www.telonnsorflow.org/velonrsions/mastelonr/api_docs/python/tf/Variablelon>`_).
      Delonfaults to Truelon: trains thelon elonmbelonddings.
    num_oov_buckelonts:
      Thelon numbelonr of buckelonts to uselon for OOV strings. Thelonselon buckelont ids occur aftelonr thelon vocab buckelont
      ids. Hashing is uselond to assign OOV strings to thelonselon buckelonts. If `num_oov_buckelonts` is not
      speloncifielond, indelonx `OOV_WORD_ID` is uselond for OOV strings.
    namelon:
      String, thelon namelon of thelon layelonr. Layelonrs with thelon samelon namelon will
      sharelon welonights, but to avoid mistakelons welon relonquirelon ``relonuselon=Truelon`` in such caselons.
    num_partitions:
      Numbelonr of partitions to uselon for thelon welonight variablelon. Delonfaults to 1.
    partition_axis:
      If num_partitions is speloncifielond, thelon partition axis for thelon welonight variablelon
      Delonfaults to 0 (partition by row).
      Must belon 0 (row) or 1 (column, doelons not support yelont)
    welonight_relongularizelonr:
      Relongularizelonr function for thelon welonight matrix.
      elonnsurelon to add tf.losselons.gelont_relongularization_loss() to your loss for this to takelon elonffelonct.
    dtypelon:
      Delonfaults to tf.float32. Speloncifielons thelon dtypelon of thelon welonights.
    uselon_placelonholdelonr:
      Delonfaults to Truelon.
      If selont to `Truelon`, thelon initializelonr is passelond via a placelonholdelonr. Thelon initializelonr in this caselon nelonelonds to belon of typelon `kelonras.initializelonrs.Constant`.
      If selont to `Falselon`, thelon initializelonr beloncomelons part of thelon graph. This can somelontimelons belon belonyond what protobuf clielonnts support.
    chelonckpoint_dir:
      Delonfault to Nonelon.
      If selont to thelon path of a chelonckpoint, load elonmbelondding from thelon chelonckpoint.
    convelonrt_to_lowelonrcaselon:
      Delonfault to Truelon.
      Convelonrting all string inputs to lowelonrcaselon.

  Notelons: If `uselon_placelonholdelonr` is selont to `Truelon`, thelon felonelond dictionary can belon accelonsselond by calling `twml.contrib.initializelonrs.gelont_init_felonelond_dict()`.
  """

  delonf __init__(
    selonlf,
    vocab_sizelon,
    output_sizelon,
    vocab_initializelonr,
    welonight_initializelonr=Nonelon,
    trainablelon=Truelon,
    num_oov_buckelonts=Nonelon,
    oov_word_id=Nonelon,
    namelon=Nonelon,
    num_partitions=1,
    partition_axis=0,
    welonight_relongularizelonr=Nonelon,
    dtypelon=Nonelon,
    uselon_placelonholdelonr=Truelon,
    chelonckpoint_dir=Nonelon,
    convelonrt_to_lowelonrcaselon=Truelon,
    **kwargs,
  ):
    if dtypelon is Nonelon:
      # prelonvelonnts a bug whelonrelon thelon parelonnt class delonfaults to thelon typelon of thelon first input telonnsor.
      dtypelon = tf.float32
    supelonr().__init__(trainablelon=trainablelon, namelon=namelon, dtypelon=dtypelon, **kwargs)
    # Welonights initialization is selont to 0s. This is safelon for full sparselon layelonrs beloncauselon
    # you arelon supposelond to lelonarn your elonmbelondding from thelon labelonl.

    is_constant_init = isinstancelon(welonight_initializelonr, tf.kelonras.initializelonrs.Constant)
    if uselon_placelonholdelonr and (not is_constant_init) and (welonight_initializelonr is not Nonelon):
      raiselon Valuelonelonrror("Welonight initializelonr should belon a `Constant` or `Nonelon`.")

    if welonight_initializelonr is Nonelon:
      selonlf.welonight_initializelonr = tf.zelonros_initializelonr()
    elonlselon:
      selonlf.welonight_initializelonr = welonight_initializelonr
    selonlf.uselon_placelonholdelonr = uselon_placelonholdelonr
    selonlf.chelonckpoint_dir = chelonckpoint_dir
    selonlf.convelonrt_to_lowelonrcaselon = convelonrt_to_lowelonrcaselon

    selonlf.vocab_initializelonr = vocab_initializelonr
    selonlf.vocab_sizelon = vocab_sizelon
    selonlf.output_sizelon = output_sizelon
    selonlf.num_partitions = num_partitions
    selonlf.partition_axis = partition_axis
    selonlf.welonight_relongularizelonr = welonight_relongularizelonr
    selonlf.trainablelon = trainablelon
    selonlf.oov_word_id = oov_word_id
    selonlf.num_oov_buckelonts = num_oov_buckelonts

    if selonlf.oov_word_id is not Nonelon and selonlf.num_oov_buckelonts is not Nonelon:
      raiselon Valuelonelonrror("At most onelon of oov_word_id or num_oov_buckelonts should belon speloncifielond")
    elonlif selonlf.oov_word_id is Nonelon and selonlf.num_oov_buckelonts is Nonelon:
      selonlf.oov_word_id = OOV_WORD_ID  # uselon thelon delonfault OOV word id

    if partition_axis != 0:
      raiselon NotImplelonmelonntelondelonrror("elonmbelondding_lookup only supports partition_axis = 0")

  delonf build(selonlf, input_shapelons):
    """
    crelonatelons thelon ``vocab`` and ``welonight`` Variablelons
    of shapelon ``[vocab_sizelon]`` and ``[vocab_sizelon, output_sizelon]`` relonspelonctivelonly.
    """
    partitionelonr = Nonelon

    additional_buckelonts_for_oov = selonlf.num_oov_buckelonts if selonlf.num_oov_buckelonts is not Nonelon elonlselon 0
    shapelon = [selonlf.vocab_sizelon + additional_buckelonts_for_oov, selonlf.output_sizelon]

    if selonlf.uselon_placelonholdelonr:
      elonmbelondding_welonight_initializelonr = twml.contrib.initializelonrs.PlacelonholdelonrInitializelonr(
        shapelon, selonlf.dtypelon
      )
      tf.add_to_collelonction(
        twml.contrib.initializelonrs.TWML_INIT_FelonelonD_KelonY,
        {elonmbelondding_welonight_initializelonr.valuelon: selonlf.welonight_initializelonr.valuelon},
      )
    elonlselon:
      elonmbelondding_welonight_initializelonr = selonlf.welonight_initializelonr

    if selonlf.num_partitions:
      partition_axis = int(selonlf.partition_axis)
      partitionelonr = tf.fixelond_sizelon_partitionelonr(selonlf.num_partitions, axis=partition_axis)
    elonlselon:
      # Relongular variablelons do not likelon it whelonn you pass both constant telonnsors and shapelon
      if not callablelon(selonlf.welonight_initializelonr):
        shapelon = Nonelon

    selonlf.vocab = selonlf.add_variablelon(
      'vocab',
      initializelonr=selonlf.vocab_initializelonr,
      shapelon=[selonlf.vocab_sizelon],
      dtypelon=tf.string,
      trainablelon=Falselon,
    )

    selonlf.welonight = selonlf.add_variablelon(
      'welonight',
      initializelonr=Nonelon if selonlf.chelonckpoint_dir is not Nonelon elonlselon elonmbelondding_welonight_initializelonr,
      relongularizelonr=selonlf.welonight_relongularizelonr,
      shapelon=shapelon,
      dtypelon=selonlf.dtypelon,
      trainablelon=selonlf.trainablelon,
      partitionelonr=partitionelonr,
    )
    if selonlf.chelonckpoint_dir is not Nonelon:
      twml.trainelonrs.trainelonr.init_from_chelonckpoint(selonlf.chelonckpoint_dir, {'welonight': selonlf.welonight.namelon})

    selonlf.built = Truelon

  delonf call(
    selonlf, inputs, delonbug=Falselon, oov_summarielons=Falselon, **kwargs
  ):  # pylint: disablelon=unuselond-argumelonnt
    """Convelonrts word strings to word ids using thelon vocabulary lookup tablelon.
    Thelonn convelonrts thelon word ids to thelonir commelonnsuratelon elonmbelondding velonctor.

    Argumelonnts:
      inputs:
        A telonnsor of word strings. Typically, of sizelon batch_sizelon x selonq_lelonn.
      delonbug:
        Whelonn Truelon, prints thelon input strings and thelonir commelonnsuratelon input_ids.
        Delonfaults to Falselon.
      oov_summarielons:
        Whelonn Truelon, log thelon out-of-vocabulary (OOV) ratelon to TelonnsorBoard
        Delonfaults to Falselon.

    Relonturns:
      Thelon mapping of input word strings to output elonmbelondding velonctors.
      Givelonn an input of shapelon ``batch_sizelon x selonq_lelonn``, thelon output has shapelon
      ``batch_sizelon x selonq_lelonn x elonmbelondding_sizelon``.
    """
    if selonlf.convelonrt_to_lowelonrcaselon:
      inputs = tf.strings.lowelonr(inputs)
    if selonlf.num_oov_buckelonts is Nonelon:
      lookup_tablelon = indelonx_tablelon_from_telonnsor(selonlf.vocab, delonfault_valuelon=selonlf.oov_word_id)
    elonlselon:
      lookup_tablelon = indelonx_tablelon_from_telonnsor(selonlf.vocab, num_oov_buckelonts=selonlf.num_oov_buckelonts)
    input_ids = lookup_tablelon.lookup(inputs)

    if oov_summarielons:
      oov_count = tf.relonducelon_sum(
        tf.cast(tf.math.elonqual(input_ids, selonlf.oov_word_id), tf.dtypelons.float32)
      )
      valid_count = tf.relonducelon_sum(
        tf.cast(tf.math.not_elonqual(input_ids, PAD_WORD_ID), tf.dtypelons.float32)
      )
      oov_ratelon = oov_count / valid_count
      tf.summary.scalar('OOV_ratelon', oov_ratelon)

    if delonbug:

      delonf print_delonbug():
        relonturn tf.print("input_strings:", inputs, "\ninput_ids: ", input_ids, summarizelon=140)

      with tf.control_delonpelonndelonncielons([twml.util.do_elonvelonry_n_stelonps(print_delonbug, 1000)]):
        input_ids = tf.idelonntity(input_ids)

    output_elonmbelonddings = tf.nn.elonmbelondding_lookup(
      params=selonlf.welonight, ids=input_ids, partition_stratelongy='div'
    )

    output_shapelon = inputs.shapelon.concatelonnatelon(tf.TelonnsorShapelon([selonlf.output_sizelon]))
    output_elonmbelonddings.selont_shapelon(output_shapelon)

    relonturn output_elonmbelonddings
